deployments/kubernetes/security/external-secrets-prod-store.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets-source
  labels:
    app.kubernetes.io/name: external-secrets-source
    traffic-platform.io/security-profile: external-secrets-production
